2000-11-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (bin-dist): Pass -C to $(MAKE), not -c.

2000-11-16  Paul Kienzle <pkienzle@kienzle.powernet.co.uk>

	* plot/contour.m: Reorder args for Matlab compatibility.

2000-10-27  Mats Jansson  <mats.e.jansson@home.se>

	* set/create_set.m: Avoid empty matrix in matrix list warning.

2000-09-08  Teemu Ikonen  <tpikonen@pcu.helsinki.fi>

	* plot/errorbar.m, plot/__errplot__.m: New functions.

	* plot/mesh.m: Also set nologscale before plotting.
	* plot/__pltopt1__.m: Handle xerrorbars, yerrorbars, and
	xyerrorbars instead of just errorbars.

2000-08-25  Thomas Walter  <walter@pctc.chemie.uni-erlangen.de>

	* image/image.m: Try display (from ImageMagick) first.

2000-08-01  Rolf Fabian  <fabian@tu-cottbus.de>

	* plot/meshgrid.m: Use transpose to reorient vectors, not complex
	conjugate transpose.

2000-07-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* strings/str2mat.m: Apply setstr to each argument.

2000-07-17  Gabriele Pannocchia  <pannocchia@ing.unipi.it>

	* control/base/dkalman.m: New file.
	* control/base/dlqe.m: Handle singular A matrix.
	* control/base/dlqr.m: Likewise.

2000-07-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* strings/strcmp.m: Return 0 instead of an error if row and column
	dimensions don't match.

2000-06-30  Kai Habel  <kahacjde@calvados.zrz.TU-Berlin.DE>

	* plot/hist.m: Allow 3 argument form to work.

2000-06-27  Matthew W. Roberts <matt@lehi.tamu.edu>

	* plot/plot.m: Add examples in doc string.

2000-06-08  Ben Sapp <bsapp@nua.lampf.lanl.gov>

	* control/base/__stepimp__.m: Reset multiplot state when done.
	Do the right thing even if automatic_replot is not zero.
	Avoid failure if system has pure imaginary poles.

2000-06-06  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/logical.m: Return arg if it is empty.  Better error
	message for non-numeric types.	

2000-05-31  A. Scottedward Hodel <a.s.hodel@eng.auburn.edu>
